--- a/documentation/scholarly.html
+++ b/documentation/scholarly.html
@@ -59,10 +59,32 @@
                 <a href="https://github.com/srzvan/" property="schema:name">Sbîngu Răzvan</a>
             </dd>
         </dl>
+        <section typeof="sa:Affiliations">
+  <h2>Affiliations</h2>
+  <ul>
+    <li id="sa">
+      <span typeof="schema:Organization" resource="http://www.info.uaic.ro/bin/Admission/Admission?language=ro">
+        <span property="schema:name">Faculty of computer science</span>,
+        <span property="schema:parentOrganization">
+          <span typeof="schema:Organization">
+            <span property="schema:name">CLIW</span>
+            —
+            <span property="schema:location" typeof="schema:Place">
+                <span property="schema:addressLocality">IS</span>,
+                <span property="schema:addressCountry">RO</span>
+              </span>
+            </span>
+          </span>
+        </span>
+      </span>
+    </li>
+  </ul>
+</section>
+            
     </div> <!-- contentinfo -->
 
     <section typeof="sa:Abstract" id="abstract" role="doc-abstract">
-        <h2><span>1. Abstract</span></h2>
+        <h2 property="schema:title"><span>1. Abstract</span></h2>
         <p>
             A PWA (Progressive Web App) meant to stimulate interaction between the people that study/work in local
             public places (e.g. libraries, cafes or co-working spaces).
