draft doc & firebase.auth() test

--- a/src/pages/add-listing.html
+++ b/src/pages/add-listing.html
@@ -187,7 +187,7 @@
           <section id="study-fourthQuestion" class="form__section hidden">
             <div class="form__section--curentQuestion">Fourth question</div>
             <h1 class="form__section--h1">Public Study</h1>
-            <p class="form__section--p">My project is  <input type="textarea" class="form__section--input" required>
+            <p class="form__section--p">Short Description  <input type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
                 <button type="button" id="next" class="form__section--button">Next</button>
