--- a/documentation/tests/test.html
+++ b/documentation/tests/test.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button id="js-login">login 👀</button>
+    <button id="js-show-data">show data 📃</button>
 </body>
 <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
 <script src="google.js"></script>
