--- a/src/pages/single-place.html
+++ b/src/pages/single-place.html
@@ -394,12 +394,21 @@
               <h2>Subscribe </h2>
             </div>
             <div class="place-listings__subscribers">
-              <span class="place-listings__subscribers-number"> <a href="#">100000</a>
+              <span class="place-listings__subscribers-number"> <a  id="subscribers" href="#">100000</a>
                 people subscribed
               </span>
             </div>
           </div>
         </div>
+      </div>
+      <div id="subscribed-peopleJS" class="subscribed-people">
+        <div id="subscribed-people__contentJS" class="subscribed-people__content">
+          <div class="subscribed-people__content-header">
+            <span id="closeJS" class="subscribed-people__close">&times;</span>
+            <h3 class="subscribed-people__title">Subscribed people</h3>
+          </div>
+        </div>
+
       </div>
     </section>
 
