--- a/src/pages/single-place.html
+++ b/src/pages/single-place.html
@@ -394,18 +394,69 @@
               <h2>Subscribe </h2>
             </div>
             <div class="place-listings__subscribers">
-              <span class="place-listings__subscribers-number"> <a  id="subscribers" href="#">100000</a>
+              <span class="place-listings__subscribers-number"> <a id="subscribers" href="#">100000</a>
                 people subscribed
               </span>
             </div>
           </div>
         </div>
       </div>
-      <div id="subscribed-peopleJS" class="subscribed-people">
-        <div id="subscribed-people__contentJS" class="subscribed-people__content">
-          <div class="subscribed-people__content-header">
-            <span id="closeJS" class="subscribed-people__close">&times;</span>
-            <h3 class="subscribed-people__title">Subscribed people</h3>
+      <div id="subscribed-peopleJS" class="subscribed-modal">
+        <div id="subscribed-people__contentJS" class="subscribed-modal__content">
+          <div class="subscribed-modal__content-header">
+            <span id="closeJS" class="subscribed-modal__close">&times;</span>
+            <h3 class="subscribed-modal__title">Subscribed people</h3>
+          </div>
+          <div class="subscriber-modal__content-flex">
+            <div class="subscriber-container">
+              <img class="subscriber__pic" src="../assets/images/user-profile-pic.jpg">
+              <div class="subscriber__info">
+                <h3 class="subscriber__info-name">Gelu Samadau</h3>
+                <button class="subscriber__info-profile">View profile</button>
+              </div>
+            </div>
+            <div class="subscriber-container">
+              <img class="subscriber__pic" src="../assets/images/user-profile-pic.jpg">
+              <div class="subscriber__info">
+                <h3 class="subscriber__info-name">Gelu Samadau</h3>
+                <button class="subscriber__info-profile">View profile</button>
+              </div>
+            </div>
+            <div class="subscriber-container">
+              <img class="subscriber__pic" src="../assets/images/user-profile-pic.jpg">
+              <div class="subscriber__info">
+                <h3 class="subscriber__info-name">Gelu Samadau</h3>
+                <button class="subscriber__info-profile">View profile</button>
+              </div>
+            </div>
+            <div class="subscriber-container">
+              <img class="subscriber__pic" src="../assets/images/user-profile-pic.jpg">
+              <div class="subscriber__info">
+                <h3 class="subscriber__info-name">Gelu Samadau</h3>
+                <button class="subscriber__info-profile">View profile</button>
+              </div>
+            </div>
+            <div class="subscriber-container">
+              <img class="subscriber__pic" src="../assets/images/user-profile-pic.jpg">
+              <div class="subscriber__info">
+                <h3 class="subscriber__info-name">Gelu Samadau</h3>
+                <button class="subscriber__info-profile">View profile</button>
+              </div>
+            </div>
+            <div class="subscriber-container">
+              <img class="subscriber__pic" src="../assets/images/user-profile-pic.jpg">
+              <div class="subscriber__info">
+                <h3 class="subscriber__info-name">Gelu Samadau</h3>
+                <button class="subscriber__info-profile">View profile</button>
+              </div>
+            </div>
+            <div class="subscriber-container">
+              <img class="subscriber__pic" src="../assets/images/user-profile-pic.jpg">
+              <div class="subscriber__info">
+                    <h3 class="subscriber__info-name">Gelu Samadau</h3>
+                    <button class="subscriber__info-profile">View profile</button>
+              </div>
+          </div>
           </div>
         </div>
 
