--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,8 +30,6 @@
           <li><a href="browse-listings.html">Listings</a></li>
           <li><a href="browse-places.html">Places</a></li>
           <li><a href="account.html">Account</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="">Sign in</a></li>
           <li>
             <input name="notifications-checkbox" id="notifications-trigger" type="checkbox">
             <label for="notifications-trigger"><i class="fas fa-bell fa-icon"></i></label>
@@ -45,22 +43,72 @@
                   requested to join your listing.
                 </div>
               </li>
-              <li><i class="fas fa-code"></i></li>
-              <li><i class="fas fa-book"></i></li>
-              <li><i class="fas fa-comment"></i></li>
+              <li class="notification">
+                <div class="notification__icon">
+                  <i class="fas fa-user-check"></i>
+                </div>
+                <div class="notification__description">
+                  <span class="user">Johnny Doe</span>
+                  requested to join your listing.
+                </div>
+              </li>
+              <li class="notification">
+                <div class="notification__icon">
+                  <i class="fas fa-user-check"></i>
+                </div>
+                <div class="notification__description">
+                  <span class="user">Johnny Doe</span>
+                  requested to join your listing.
+                </div>
+              </li>
+              <li class="notification">
+                <div class="notification__icon">
+                  <i class="fas fa-user-check"></i>
+                </div>
+                <div class="notification__description">
+                  <span class="user">Johnny Doe</span>
+                  requested to join your listing.
+                </div>
+              </li>
+              <li class="notification">
+                <div class="notification__icon">
+                  <i class="fas fa-user-check"></i>
+                </div>
+                <div class="notification__description">
+                  <span class="user">Johnny Doe</span>
+                  requested to join your listing.
+                </div>
+              </li>
+              <li class="notification">
+                <div class="notification__icon">
+                  <i class="fas fa-user-check"></i>
+                </div>
+                <div class="notification__description">
+                  <span class="user">Johnny Doe</span>
+                  requested to join your listing.
+                </div>
+              </li>
+              <li class="notification">
+                <div class="notification__icon">
+                  <i class="fas fa-user-check"></i>
+                </div>
+                <div class="notification__description">
+                  <span class="user">Johnny Doe</span>
+                  requested to join your listing.
+                </div>
+              </li>
+              <li class="notification">
+                <div class="notification__icon">
+                  <i class="fas fa-user-check"></i>
+                </div>
+                <div class="notification__description">
+                  <span class="user">Johnny Doe</span>
+                  requested to join your listing.
+                </div>
+              </li>
             </ul>
           </li>
         </ul>
-        <!-- <div class="nav--dropdown">
-          <div class="dropdown__button"><a href="#">Sign in</a></div>
-          <div class="dropdown__content">
-            <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Gmail</a></li>
-            </ul>
-          </div>
-        </div> -->
       </div>
 
       <div class="mobile-header">
